# flowmetrics

./: .env.example  .gitignore  README.md  cleanup_artists.py  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: artist_analysis.py  combined_analysis.py  lyrics_analysis.py  musicbrainz_analysis.py  scrape_single_song.py  scraper.py
flow_metrics/analysis/: vocabulary.py
flow_metrics/clients/: factory.py  lyrics_scraper.py  musicbrainz.py  musixmatch.py  spotify.py
flow_metrics/config/: settings.py
flow_metrics/db/: mongodb.py
flow_metrics/http/: client.py
flow_metrics/models/: lyrics.py  musicbrainz.py  musixmatch.py  spotify.py
flow_metrics/scripts/: collect_artists.py  view_artists.py
flow_metrics/utils/: fix_musicbrainz_models.py  matching.py
scripts/: get_artist_data.py
tests/clients/: test_spotify.py
